@@ -66,7 +66,7 @@ parameterDescription= [scale_0,amplitude_0]
 myModel( [-1] ,  [3] )= class=CovarianceMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1.25758]
 dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[0.84513]
 dCov (FD)= class=Point name=Unnamed dimension=1 values=[0.845133]
-dCov/dP= [[ 0      ]
+dCov/dP= [[ 1.69   ]
  [ 0.8384 ]]
 myModel =  MaternModel(scale=[2,2], amplitude=[3], nu=1.5)
 active= [0,1,2]
@@ -75,8 +75,8 @@ parameterDescription= [scale_0,scale_1,amplitude_0]
 myModel( [-1,-2] ,  [3,5] )= class=CovarianceMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[0.0666906]
 dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=2 columns=1 values=[0.025065,0.0438637]
 dCov (FD)= class=Point name=Unnamed dimension=2 values=[0.025065,0.0438639]
-dCov/dP= [[ 0       ]
- [ 0       ]
+dCov/dP= [[ 0.05013 ]
+ [ 0.1535  ]
  [ 0.04446 ]]
 myDefautModel =  class=ExponentiallyDampedCosineModel(scale=[2], amplitude=[3], frequency=1.5)
 myModel =  class=ExponentiallyDampedCosineModel(scale=[2], amplitude=[3], frequency=1.5)
